# Binary-descriptors

./: .gitignore  README.md
images/: I1.pgm  I2.pgm
opencv/: BinaryDescriptors  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  function_opencv.cpp  function_opencv.h  main.cpp
opencv/Images/: lena.pgm  resultat.pgm
vpBrief/: CMakeLists.txt  function_opencv.h  main.cpp  ransac.cpp  ransac.h  vpBrief.cpp  vpBrief.h
vpFast/: .directory  CMakeLists.txt  main.cpp  vpFast.cpp  vpFast.h  vpGetKeypointFast.cpp  vpGetKeypointFast.h  vpGetKeypointsFast.cpp  vpGetKeypointsFast.h
